tests/baselines/reference/genericFunctionAgainstUnresolvableSelfReferencingAwaitedUnion.errors.txt
tests/cases/compiler/genericFunctionAgainstUnresolvableSelfReferencingAwaitedUnion.ts(9,32): error TS2322: Type 'SimpleType' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'SimpleType'.


==== tests/cases/compiler/genericFunctionAgainstUnresolvableSelfReferencingAwaitedUnion.ts (1 errors) ====
    // repro #49646
    
    type EnvFunction = <T>() => T;
    
    type SimpleType = string | Promise<SimpleType>;
    
    declare const simple: SimpleType;
    
    const env: EnvFunction = () => simple;
                                   ~~~~~~
!!! error TS2322: Type 'SimpleType' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'SimpleType'.
!!! related TS6502 tests/cases/compiler/genericFunctionAgainstUnresolvableSelfReferencingAwaitedUnion.ts:3:20: The expected type comes from the return type of this signature.
    